Successfully implement and test functional GET routes in full-stack website

--- a/Kunstenaar.html
+++ b/Kunstenaar.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/zrl0ajt.css">
     <link rel="stylesheet" href="./style/index.css">
-    <title>index</title>
+    <script src="artists.js" defer type="module"></script>
+    <title>Kunstenaar in de kijker</title>
 <link rel="stylesheet" href="./style/style.css">
 <link rel="stylesheet" href="./style/Kunstenaar.css">
 </head>
@@ -36,70 +37,10 @@
         </div>
     </div>
     <div class="book-wrapper">
-        <div class="page-left">
-              <!--     <div class="test">
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>                
-                <p></p>
-                <p></p>
-            </div>-->
-           <div class="Artist-title">
-                <h2>KUNSTENAAR IN DE KIJKER</h2>
-                <h3>Jasper Veldman</h3>
-            </div>
-            <div class="Artist-img">
-                <img src="./images/Artist.png" alt="Artist Picture">
-            </div>
-           <div class="Artist-intro">
-                <p>Ontdek de diepgaande wereld van Jasper Veldman, een kunstenaar die met zijn expressieve abstracte schilderijen een emotionele reis voor de kijker creëert.</p>
-            </div>
-        </div>
-
-        <div class="page-right">
-           <!-- <div class="test">
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>                
-                <p></p>
-                <p></p>
-            </div>-->
-            <div class="Artist-talk-intro">
-                <h3>Jasper Veldman, geboren in het bruisende Amsterdam in 1985, is een kunstenaar die de grenzen van creativiteit verlegt. Zijn werken zijn meer dan enkel visuele composities; ze dienen als vensters naar een diepgaande ervaring. Met een unieke energie weet hij kleur en vorm te laten versmelten tot een betoverende harmonie. Op deze wijze weet Jasper zijn publiek te raken op een diep emotioneel niveau.
-                </h3>
-            </div>
-            <div class="Artist-talk-left">
-                <p>Zijn kunst wordt gekenmerkt door een diepgaande connectie met de natuur. Het lijkt wel alsof hij de essentie van het leven zelf vastlegt op het doek. De kleurenpaletten die hij hanteert roepen een breed scala aan emoties op, variërend van kalme sereniteit tot gepassioneerde vitaliteit. Door deze kleurenpracht neemt hij de kijker mee op een ontdekkingsreis door de tijdloosheid van zijn werken. Hier kan men verdwalen in een wereld van grenzeloze verbeelding. <br><br>
-
-
-                    Jasper Veldman overstijgt het traditionele schilderen. Hij schept eerder een wereld die resonantie vindt in de ziel van de toeschouwer. Zijn oeuvre fungeert als een spiegel van het leven zelf, een uitnodiging om te reflecteren op de diepere lagen van onze eigen emoties en onze verbondenheid met de natuurlijke wereld om ons heen. Met elke penseelstreek vertelt Jasper een verhaal, een verhaal dat ieder van ons op een unieke, persoonlijke manier kan raken. Zijn kunst spreekt een universele taal, een taal die tot de ziel spreekt.
-                                       
-                </p>
-            </div>
-            <div class="Artist-talk-right">
-                <p>Jaspers werken ontstaan uit een zorgvuldig proces van het mengen van acrylverf en aquarel. Deze materialen bieden hem de mogelijkheid om lagen op te bouwen en subtiele texturen te creëren. Het spel met kleur, licht en schaduw vormt de essentie van zijn werk. Voor “Ethereal Harmony” gebruikte hij verschillende penselen en spatels om de gewenste effecten te bereiken. Het vinden van de juiste balans tussen abstractie en herkenbaarheid was een uitdaging, maar het resultaat is verbluffend.</p>
-             <p>Jasper Veldman kijkt vooruit naar nieuwe uitdagingen en projecten. Hij plant verdere experimenten met nieuwe technieken en thema’s. Zijn doel is om te blijven evolueren als kunstenaar en nieuwe manieren van expressie te ontdekken. Hij hoopt ook om in de toekomst meer tentoonstellingen te organiseren, zodat een breder publiek de kans krijgt om zijn werk te ervaren en hopelijk geïnspireerd te raken.</p>
-            </div>
-            <div class="arrows">
-                <a href="./inhoud.html"><img src="./images/Path -2.svg" alt="" srcset="" style="margin-top: 12px;"></a>
-                <a href="./Meesterwerk.html"><img src="./images/Path 1.svg" alt="" srcset=""></a>
-            </div>
-
-        </div>
     </div>
+    <div id="arrows">
+        <a href="./inhoud.html"><img src="./images/Path -2.svg" alt=""></a>
+        <a href="./Meesterwerk.html"><img src="./images/Path 1.svg" alt="" srcset=""></a>
+       </div>
 </body>
 </html>
