--- a/Meesterwerk-2.html
+++ b/Meesterwerk-2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/zrl0ajt.css">
     <title>Mesterwerk</title>
+    <script src="artworks2.js" defer type="module"></script>
 <link rel="stylesheet" href="./style/style.css">
 <link rel="stylesheet" href="./style/Meesterwerk.css">
 </head>
@@ -35,53 +36,10 @@
         </div>
     </div>
     <div class="book-wrapper">
-        <div class="page-left">
-                 <!--  <div class="test">
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>                
-                <p></p>
-                <p></p>
-            </div>-->
-            <div class="Masterwork-works-1">
-                <img src="./images/pexels-alizee-marchand-937785.png" alt="">
-            </div>
-            <div class="Masterwork-works-2">
-                <img src="./images/pexels-david-bartus-3637115.png" alt="">
-            </div>
-        </div>
-
-        <div class="page-right">
-           <!-- <div class="test">
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>                
-                <p></p>
-                <p></p>
-            </div>-->
-            <div class="Masterwork-works-3">
-                <img src="./images/pexels-scott-webb-1544945.png" alt="">
-            </div>
-            <div class="arrows">
-                <a href="./Meesterwerk.html"><img src="./images/Path -2.svg" alt="" srcset=""></a>
-                <a href="./Meesterwerk-3.html"><img src="./images/Path 1.svg" alt="" srcset=""></a>
-            </div>
-
-        </div>
     </div>
+    <div id="arrows">
+        <a href="./Meesterwerk.html"><img src="./images/Path -2.svg" alt="" srcset=""></a>
+        <a href="./Meesterwerk-3.html"><img src="./images/Path 1.svg" alt="" srcset=""></a>
+       </div>
 </body>
 </html>
