--- a/Meesterwerk.html
+++ b/Meesterwerk.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/zrl0ajt.css">
     <title>Mesterwerk</title>
 <link rel="stylesheet" href="./style/style.css">
+<script src="artworks.js" defer type="module"></script>
 <link rel="stylesheet" href="./style/Meesterwerk.css">
 </head>
 <body>
@@ -35,54 +36,11 @@
         </div>
     </div>
     <div class="book-wrapper">
-        <div class="page-left">
-                <!-- <div class="test">
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>                
-                <p></p>
-                <p></p>
-            </div>-->  
-            <div class="Masterwork-title">
-                <h2>ETHEREAL HARMONY</h2>
-            </div>
-             <div class="Masterwork-text">
-                <p>“Ethereal Harmony” is een kunstwerk dat de toeschouwer uitnodigt voor een betoverende reis door een wereld van kleur en vorm. Met elke penseelstreek lijkt de kunstenaar een verborgen symfonie te onthullen, waarin tinten en schakeringen samensmelten tot een serene harmonie.</p> 
-                 <p>  De compositie ademt een gevoel van rust en eenheid, waarin de connectie tussen mens en natuur voelbaar wordt. Het is alsof het doek een moment van tijdloze schoonheid heeft gevangen, een snapshot van de eeuwige harmonie die in de wereld om ons heen te vinden is. “Ethereal Harmony” nodigt uit tot contemplatie, tot een moment van stilte waarin men kan verdrinken in de sublieme pracht van het kunstwerk.</p>
-            </div>
-        </div>
-
-        <div class="page-right">
-           <!--<div class="test">
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>                
-                <p></p>
-                <p></p>
-            </div>--> 
-            <div class="Masterwork-img">
-                <img src="./images/Meesterwerk.png" alt="">
-            </div>
-            <div class="arrows">
-               <a href="./Kunstenaar.html"><img src="./images/Path 2.svg" alt="" srcset="" style="margin-top: 12px;"></a> 
-                <a href="./Meesterwerk-2.html"><img src="./images/Path -1.svg" alt="" srcset=""></a>
-            </div>
-
         </div>
     </div>
+    <div id="arrows">
+        <a href="./Kunstenaar.html"><img src="./images/Path 2.svg" alt="" srcset="" style="margin-top: 12px;"></a> 
+        <a href="./Meesterwerk-2.html"><img src="./images/Path -1.svg" alt="" srcset=""></a>
+       </div>
 </body>
 </html>
