--- a/index.html
+++ b/index.html
@@ -77,11 +77,14 @@
                 <h2>Ontdek de verborgen kunst
                     van Brussel</h2>
             </div>
-            <div class="arrows" style="margin-top: 12px; text-align: right">
-             <a href="./inhoud.html"><img src="./images/Path 1.svg" alt="" srcset=""></a>  
-            </div>
+
 
         </div>
     </div>
+
+<div id="arrows">
+    <a href="./inhoud.html"><img src="./images/Path 1.svg" alt="" srcset=""></a>  
+   </div>
+   
 </body>
 </html>
