--- a/overOns.html
+++ b/overOns.html
@@ -79,12 +79,11 @@
             <div class="over-ons-img">
                 <img src="./images/Image 1.png" alt="">
             </div>
-            <div class="arrows">
-                <a href="./inhoud.html"><img src="./images/Path -2.svg" alt="" srcset=""></a>
-                <a href="./Kunstenaar.html"><img src="./images/Path 1.svg" alt="" srcset=""></a> 
-            </div>
-
         </div>
     </div>
+    <div id="arrows">
+        <a href="./inhoud.html"><img src="./images/Path -2.svg" alt="" srcset=""></a>
+        <a href="./Kunstenaar.html"><img src="./images/Path 1.svg" alt="" srcset=""></a> 
+       </div>
 </body>
 </html>
