--- a/GallerijToevoegen.html
+++ b/GallerijToevoegen.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="./style/GallerijToevoegen.css">
     <title>index</title>
+    <!-- <script src="./register.js" defer></script>
+    <script src="./login.js" defer></script>
+    <script src="./meesterwerk.js" defer></script> -->
+    <script src="./addGallery.js" defer></script>
 <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
@@ -61,7 +65,31 @@
         </div>
 
         <div class="page-right">
-        <!--<div class="test">
+       <!--     <div class="form-wrapper">
+                <h2 id="registreer">REGISTREER</h2>
+                <p id="form">Nog geen account? Registreer nu en voeg je gallerij toe</p>
+                <div class="form-section">
+                    <p class="form-title">Email & Wachtwoord</p>
+                    <form class="form-input" id="registerform">
+                        <input type="email" id="email" name="email" placeholder="Email">
+                        <input type="password" id="password" name="password" placeholder="Wachtwoord">
+                        <button type="submit">Registreer</button>
+                        <p id="resultRegister"></p>
+                    </form>
+                </div>
+                <h2 id="registreer">LOGIN</h2>
+                <p id="form">Heb je al een account? Log nu in en voeg je gallerij toe</p>
+                <div class="form-section">
+                    <p class="form-title">Email & Wachtwoord</p>
+                    <form class="form-input" id="loginform">
+                        <input type="email" id="loginEmail" name="loginEmail" placeholder="Email">
+                        <input type="password" id="loginPassword" name="loginPassword" placeholder="Wachtwoord">
+                        <button type="submit">Login</button>
+                        <p id="resultLogin"></p>
+                    </form>
+                </div>
+            </div>
+        <div class="test">
                 <p></p>
                 <p></p>
                 <p></p>
@@ -83,25 +111,48 @@
                 </form>
             </div>
             <div class="form-section">
-                <p class="form-title">Email adres</p>
+                <p class="form-title">Type gallerij</p>
                 <form class="form-input">
-                    <input type="email" id="email" name="email" placeholder="Vul in">
+                    <input type="text" id="typeGallery" name="typeGallery" placeholder="Vul in">
+                </form>
+            </div>
+            <div class="form-section">
+                <p class="form-title">Openengsuren Galerij</p>
+                <form class="form-input">
+                    <input type="text" id="openingHours" name="openingHours" placeholder="Vul in">
+                </form>
+            </div>
+            <div class="form-section">
+                <p class="form-title">Toegankelijkheid <br> prijs</p>
+                <form class="form-input">
+                    <input type="text" id="accessability" name="accessability" placeholder="Vul in">
+                    <input type="text" id="price" name="price" placeholder="Vul in">
+                    <input type="text" id="artist" name="artist" placeholder="Vul in">
                     </form>
             </div>
             <div class="form-section">
                 <p class="form-title">Adres Galerij</p>
                 <form class="form-input">
-                    <input type="text" id="straatnaam" name="straatnaam" placeholder="Straatnaam">
-                    <input type="text" id="nr" name="nr" placeholder="Nr">
-                    <input type="text" id="postcode" name="postcode" placeholder="Postcode">
-                    <input type="text" id="plaatsnaam" name="plaatsnaam" placeholder="Plaatsnaam">
+                    <input type="text" id="adres" name="adres" placeholder="Vul in">
                     </form>
             </div>
             <div class="form-section">
-                <p class="form-title">Beschrijving Galerij</p>
+                <p class="form-title">Beschrijving 1 Galerij</p>
+
                 <form class="form-input">                    
-                    <input type="text" id="description" name="description" placeholder="Vul in">
+                    <input type="text" id="description1" name="description1" placeholder="beschrijving">
+                    <input type="text" id="description1-title" name="description1-title" placeholder="Titel">
                     </form>
+                    <p class="form-title">Titel 1</p>
+            </div>
+            <div class="form-section">
+                <p class="form-title">Beschrijving 2 Galerij</p>
+
+                <form class="form-input">                    
+                    <input type="text" id="description2" name="description2" placeholder="beschrijving">
+                    <input type="text" id="description2-title" name="description2-title" placeholder="Titel">
+                    </form>
+                    <p class="form-title">Titel 2</p>
             </div>
             <div class="form-section last-line">
                 <p class="form-title">Sociale Media Links</p>
@@ -111,12 +162,14 @@
                     <input type="text" id="Furl" name="Furl" placeholder="Facebook link">
                     </form>
             </div>
-            </div>
-            <div class="arrows">
-            <a href="./Gallerijen2.html"><img src="./images/Path -2.svg" alt="" srcset=""></a>  
-             <a href="./veelgesteldeVragen.html"><img src="./images/Path 1.svg" alt="" srcset=""></a>  
+            <button type="submit" id="paard">paard</button>
+            <p id="result"></p>
             </div>
         </div>
     </div>
+    <div id="arrows">
+        <a href="./Gallerijen2.html"><img src="./images/Path -2.svg" alt="" srcset=""></a>  
+        <a href="./veelgesteldeVragen.html"><img src="./images/Path 1.svg" alt="" srcset=""></a>  
+       </div>
 </body>
 </html>
