--- a/Gallerijen.html
+++ b/Gallerijen.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/zrl0ajt.css">
     <link rel="stylesheet" href="./style/inhoud.css">
     <link rel="stylesheet" href="./style/gallerijen.css">
+    <script src="tableOfContents.js" defer type="module"></script>
     <title>index</title>
 <link rel="stylesheet" href="./style/style.css">
 </head>
@@ -76,87 +77,11 @@
                 <div class="inhoud-title">
                     <h2>GALLERIJEN</h2>
                 </div>
-                <div class="gallery-table">
-                    <h4 class="gallery-title">ArtVue gallery</h4>
-                    <div class="gallery-tags-2">
-                        <p class="tag-2">INSTALLATIEKUNST</p>
-                        <p class="tag-2">MODERNE KUNST</p>
-                    </div>
-                    <p class="gallery-date">05/11 - 10/11</p>
-                    <p class="gallery-page">p.15</p>
-                </div>
-                <div class="gallery-table">
-                    <h4 class="gallery-title">KunstBoutique</h4>
-                    <div class="gallery-tags-2">
-                        <p class="tag-2">FOTOGRAFIE</p>
-                    </div>
-                    <p class="gallery-date">08/11 - 15/11</p>
-                    <p class="gallery-page">p.19</p>
-                </div>
-                <div class="gallery-table">
-                    <h4 class="gallery-title">DromenAtelier</h4>
-                    <div class="gallery-tags-2">
-                        <p class="tag-2">KLASSIEKE KUNST</p>
-                    </div>
-                    <p class="gallery-date">12/11 - 24/11</p>
-                    <p class="gallery-page">p.23</p>
-                </div>
-                <div class="gallery-table">
-                    <h4 class="gallery-title">ギャラリー</h4>
-                    <div class="gallery-tags-2">
-                        <p class="tag-2">SCULPTUREN</p>
-                    </div>
-                    <p class="gallery-date">15/11 - 02/12</p>
-                    <p class="gallery-page">p.15</p>
-                </div>
-                <div class="gallery-table">
-                    <h4 class="gallery-title">Lumina Arte Hub</h4>
-                    <div class="gallery-tags-2">
-                        <p class="tag-2">PERFORMANCE KUNST</p>
-                    </div>
-                    <p class="gallery-date">18/11 - 25/12</p>
-                    <p class="gallery-page">p.27</p>
-                </div>
-                <div class="gallery-table">
-                    <h4 class="gallery-title">ArtScape Gallery</h4>
-                    <div class="gallery-tags-2">
-                        <p class="tag-2">MIXED MEDIA</p>
-                    </div>
-                    <p class="gallery-date">21/11 - 28/11</p>
-                    <p class="gallery-page">p.15</p>
-                </div>
-
-                <div class="gallery-table">
-                    <h4 class="gallery-title">Urban Elegance</h4>
-                    <div class="gallery-tags">
-                        <p class="tag-2">ABSTRACTE KUSNT</p>
-                    </div>
-                    <p class="gallery-date">24/11 - 05/12</p>
-                    <p class="gallery-page">p.39</p>
-                </div>
-                <div class="gallery-table">
-                    <h4 class="gallery-title">ARTIQ</h4>
-                    <div class="gallery-tags">
-                        <p class="tag-2">KLASSIEKE KUNST</p>
-                    </div>
-                    <p class="gallery-date">27/11 - 07/12</p>
-                    <p class="gallery-page">p.43</p>
-                </div>
-                <div class="gallery-table" style="border-bottom: 1px solid #F7F5F1;">
-                    <h4 class="gallery-title">Nova Art Space</h4>
-                    <div class="gallery-tags">
-                        <p class="tag-2">SCULPTUREN</p>
-                    </div>
-                    <p class="gallery-date" >09/12 - 22/12</p>
-                    <p class="gallery-page">p.46</p>
-                </div>
-            </div>
-            <div class="arrows" style="margin-top: 12px; text-align: right">
-                <a href="./Meesterwerk-3.html"><img src="../images/Path 2.svg" alt="" srcset=""></a> 
-             <a href="./Gallerijen2.html"><img src="./images/Path -1.svg" alt="" srcset=""></a>  
-            </div>
-
         </div>
     </div>
+    <div id="arrows">
+        <a href="./Meesterwerk-3.html"><img src="../images/Path 2.svg" alt="" srcset=""></a> 
+        <a href="./Gallerijen2.html"><img src="./images/Path -1.svg" alt="" srcset=""></a>  
+       </div>
 </body>
 </html>
