--- a/inhoud.html
+++ b/inhoud.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/zrl0ajt.css">
     <link rel="stylesheet" href="./style/inhoud.css">
     <title>index</title>
+    <script src="tableOfContents.js" defer type="module"></script>
 <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
@@ -106,90 +107,14 @@
             <div class="galleries-table">
                 <div class="inhoud-title">
                     <h2>GALLERIJEN</h2>
-                </div>
-                <div class="gallery-table">
-                    <h4 class="gallery-title">ArtVue gallery</h4>
-                    <div class="gallery-tags">
-                        <p class="tag">INSTALLATIEKUNST</p>
-                        <p class="tag">MODERNE KUNST</p>
-                    </div>
-                    <p class="gallery-date">05/11 - 10/11</p>
-                    <p class="gallery-page">p.15</p>
-                </div>
-                <div class="gallery-table">
-                    <h4 class="gallery-title">KunstBoutique</h4>
-                    <div class="gallery-tags">
-                        <p class="tag">FOTOGRAFIE</p>
-                    </div>
-                    <p class="gallery-date">08/11 - 15/11</p>
-                    <p class="gallery-page">p.19</p>
-                </div>
-                <div class="gallery-table">
-                    <h4 class="gallery-title">DromenAtelier</h4>
-                    <div class="gallery-tags">
-                        <p class="tag">KLASSIEKE KUNST</p>
-                    </div>
-                    <p class="gallery-date">12/11 - 24/11</p>
-                    <p class="gallery-page">p.23</p>
-                </div>
-                <div class="gallery-table">
-                    <h4 class="gallery-title">ギャラリー</h4>
-                    <div class="gallery-tags">
-                        <p class="tag">SCULPTUREN</p>
-                    </div>
-                    <p class="gallery-date">15/11 - 02/12</p>
-                    <p class="gallery-page">p.15</p>
-                </div>
-                <div class="gallery-table">
-                    <h4 class="gallery-title">Lumina Arte Hub</h4>
-                    <div class="gallery-tags">
-                        <p class="tag">PERFORMANCE KUNST</p>
-                    </div>
-                    <p class="gallery-date">18/11 - 25/12</p>
-                    <p class="gallery-page">p.27</p>
-                </div>
-                <div class="gallery-table">
-                    <h4 class="gallery-title">ArtScape Gallery</h4>
-                    <div class="gallery-tags">
-                        <p class="tag">MIXED MEDIA</p>
-                    </div>
-                    <p class="gallery-date">21/11 - 28/11</p>
-                    <p class="gallery-page">p.15</p>
-                </div>
-
-                <div class="gallery-table">
-                    <h4 class="gallery-title">Urban Elegance</h4>
-                    <div class="gallery-tags">
-                        <p class="tag">ABSTRACTE KUSNT</p>
-                    </div>
-                    <p class="gallery-date">24/11 - 05/12</p>
-                    <p class="gallery-page">p.39</p>
-                </div>
-                <div class="gallery-table">
-                    <h4 class="gallery-title">ARTIQ</h4>
-                    <div class="gallery-tags">
-                        <p class="tag">KLASSIEKE KUNST</p>
-                    </div>
-                    <p class="gallery-date">27/11 - 07/12</p>
-                    <p class="gallery-page">p.43</p>
-                </div>
-                <div class="gallery-table" style="border-bottom: 1px solid #F7F5F1;">
-                    <h4 class="gallery-title">Nova Art Space</h4>
-                    <div class="gallery-tags">
-                        <p class="tag">SCULPTUREN</p>
-                    </div>
-                    <p class="gallery-date" >09/12 - 22/12</p>
-                    <p class="gallery-page">p.46</p>
-                </div>
-            </div>
-            
-            <div class="arrows">
-                <a href="./index.html"><img src="./images/Path 2.svg" alt=""></a>
-                <a href="./overOns.html"><img src="./images/Path -1.svg" alt=""></a>
+                </div>    
             </div>
             </div> 
-
         </div>
     </div>
+    <div id="arrows">
+        <a href="./index.html"><img src="./images/Path 2.svg" alt=""></a>
+        <a href="./overOns.html"><img src="./images/Path -1.svg" alt=""></a>
+       </div>
 </body>
 </html>
