--- a/veelgesteldeVragen.html
+++ b/veelgesteldeVragen.html
@@ -104,11 +104,10 @@
                 <h3>Hoe kan ik zien hoe vaak mijn galerij wordt bekeken op de website?</h3>
                 <p>Om het aantal keer dat je galerij is bekeken te bekijken, log je in op je account en ga je naar het dashboard. Daar vind je gedetailleerde statistieken die aangeven hoe vaak je galerij wordt bezocht, waardoor je inzicht krijgt in de interesse van het publiek.</p>
             </div>
-            <div class="arrows">
-             <a href="./Gallerijen.html"><img src="./images/Path 2.svg" alt="" srcset=""></a>  
-            </div>
-
         </div>
     </div>
+    <div id="arrows">
+        <a href="./Gallerijen.html"><img src="./images/Path 2.svg" alt="" srcset=""></a>  
+       </div>
 </body>
 </html>
