--- a/delete.html
+++ b/delete.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="delete.js" defer type="module"></script>
+    <script src="galleries.js" defer type="module"></script>
 </head>
 <body>
-    
+    <p id="idText"></p>
+    <button type="submit">Ja</button>
+    <button type="submit">Nee ga terug.</button>
 </body>
 </html>
