Implemented frontend-backend communication, integrating Create, Read, Update, and Delete (CRUD) operations in the process.

--- a/Gallerijen.html
+++ b/Gallerijen.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./style/inhoud.css">
     <link rel="stylesheet" href="./style/gallerijen.css">
     <script src="tableOfContents.js" defer type="module"></script>
-    <title>index</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
+    <title>Gallerijen</title>
 <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
@@ -19,12 +20,14 @@
             <nav>
                 <ul>
                     <li> <a href="./index.html">01 HOME</a></li>
+                    <li> <a href="./inhoud.html">03 INHOUDSTAFEL</a></li>
                     <li> <a href="./overOns.html">05 OVER ONS</a></li>
                     <li><a href="./Kunstenaar.html">07 KUNSTENAAR IN DE KIJKER</a></li>
                     <li><a href="./Meesterwerk.html">09 MEESTERWERK VAN DE MAAND</a></li>
                     <li class="selected"><a href="./Gallerijen.html">15 GALLERIJEN</a></li>
                     <li><a href="./GallerijToevoegen.html">63 GALLERIJ TOEVOEGEN</a></li>
-                    <li><a href="./veelgesteldeVragen.html">65 VEELGESTELDE VRAGEN</a></li>
+                    <li><a href="./updateGallery.html">65 GALLERIJ AANPASSEN</a></li>
+                    <li><a href="./veelgesteldeVragen.html">67 VEELGESTELDE VRAGEN</a></li>
                 </ul>
             </nav>
             <div class="contact">
@@ -38,41 +41,12 @@
     </div>
     <div class="book-wrapper">
         <div class="page-left">
-       <!--<div class="test">
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>                
-                <p></p>
-                <p></p>
-            </div>--> 
-
             <div class="Gallerijen-img">
                 <img src="./images/gale.png" alt="">
             </div>
         </div>
 
         <div class="page-right" style="background-color: #E50F10;">
-            <!--           <div class="test">
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>                
-                <p></p>
-                <p></p>
-            </div>--> 
             <div class="galleries-table">
                 <div class="inhoud-title">
                     <h2>GALLERIJEN</h2>
