--- a/Gallerijen2.html
+++ b/Gallerijen2.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="https://use.typekit.net/zrl0ajt.css">
     <link rel="stylesheet" href="./style/inhoud.css">
     <link rel="stylesheet" href="./style/gallerijen.css">
-    <title>index</title>
+    <title>Gallerijen</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
     <script src="galleries.js" defer type="module"></script>
 <link rel="stylesheet" href="./style/style.css">
 </head>
@@ -16,15 +17,17 @@
             <div class="title">
                 <a href="./index.html"><h1>BRUSSEL IN BEELD</h1></a>
             </div>
-            <nav $>
+            <nav>
                 <ul>
                     <li> <a href="./index.html">01 HOME</a></li>
+                    <li> <a href="./inhoud.html">03 INHOUDSTAFEL</a></li>
                     <li> <a href="./overOns.html">05 OVER ONS</a></li>
                     <li><a href="./Kunstenaar.html">07 KUNSTENAAR IN DE KIJKER</a></li>
                     <li><a href="./Meesterwerk.html">09 MEESTERWERK VAN DE MAAND</a></li>
                     <li class="selected"><a href="./Gallerijen.html">15 GALLERIJEN</a></li>
                     <li><a href="./GallerijToevoegen.html">63 GALLERIJ TOEVOEGEN</a></li>
-                    <li><a href="./veelgesteldeVragen.html">65 VEELGESTELDE VRAGEN</a></li>
+                    <li><a href="./updateGallery.html">65 GALLERIJ AANPASSEN</a></li>
+                    <li><a href="./veelgesteldeVragen.html">67 VEELGESTELDE VRAGEN</a></li>
                 </ul>
             </nav>
             <div class="contact">
@@ -39,7 +42,6 @@
     <div class="book-wrapper">
     </div>
     <div id="arrows">
-        <button type="submit" id="cok">cok</button>
         <a href="#"><img src="./images/Path -2.svg" alt="" srcset="" id="back"></a> 
      <a href="#"><img src="./images/Path 1.svg" alt="" srcset="" id="next"></a>   
        </div>
