--- a/Meesterwerk.html
+++ b/Meesterwerk.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/zrl0ajt.css">
-    <title>Mesterwerk</title>
+    <title>Meesterwerk van de maand</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
 <link rel="stylesheet" href="./style/style.css">
 <script src="artworks.js" defer type="module"></script>
 <link rel="stylesheet" href="./style/Meesterwerk.css">
@@ -18,12 +19,14 @@
             <nav>
                 <ul>
                     <li> <a href="./index.html">01 HOME</a></li>
+                    <li> <a href="./inhoud.html">03 INHOUDSTAFEL</a></li>
                     <li> <a href="./overOns.html">05 OVER ONS</a></li>
                     <li><a href="./Kunstenaar.html">07 KUNSTENAAR IN DE KIJKER</a></li>
                     <li class="selected"><a href="./Meesterwerk.html">09 MEESTERWERK VAN DE MAAND</a></li>
                     <li><a href="./Gallerijen.html">15 GALLERIJEN</a></li>
                     <li><a href="./GallerijToevoegen.html">63 GALLERIJ TOEVOEGEN</a></li>
-                    <li><a href="./veelgesteldeVragen.html">65 VEELGESTELDE VRAGEN</a></li>
+                    <li><a href="./updateGallery.html">65 GALLERIJ AANPASSEN</a></li>
+                    <li><a href="./veelgesteldeVragen.html">67 VEELGESTELDE VRAGEN</a></li>
                 </ul>
             </nav>
             <div class="contact">
