--- a/inhoud.html
+++ b/inhoud.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/zrl0ajt.css">
     <link rel="stylesheet" href="./style/inhoud.css">
-    <title>index</title>
+    <title>Inhoud</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
     <script src="tableOfContents.js" defer type="module"></script>
 <link rel="stylesheet" href="./style/style.css">
 </head>
@@ -17,13 +18,15 @@
             </div>
             <nav>
                 <ul>
-                    <li class="selected"> <a href="#">01 HOME</a></li>
+                    <li> <a href="./index.html">01 HOME</a></li>
+                    <li class="selected"> <a href="./inhoud.html">03 INHOUDSTAFEL</a></li>
                     <li> <a href="./overOns.html">05 OVER ONS</a></li>
                     <li><a href="./Kunstenaar.html">07 KUNSTENAAR IN DE KIJKER</a></li>
                     <li><a href="./Meesterwerk.html">09 MEESTERWERK VAN DE MAAND</a></li>
                     <li><a href="./Gallerijen.html">15 GALLERIJEN</a></li>
                     <li><a href="./GallerijToevoegen.html">63 GALLERIJ TOEVOEGEN</a></li>
-                    <li><a href="./veelgesteldeVragen.html">65 VEELGESTELDE VRAGEN</a></li>
+                    <li><a href="./updateGallery.html">65 GALLERIJ AANPASSEN</a></li>
+                    <li><a href="./veelgesteldeVragen.html">67 VEELGESTELDE VRAGEN</a></li>
                 </ul>
             </nav>
             <div class="contact">
@@ -37,29 +40,13 @@
     </div>
     <div class="book-wrapper">
         <div class="page-left">
-               <!--           <div class="test">
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>                
-                <p></p>
-                <p></p>
-            </div>--> 
-
             <div class="content-Inhoud-left">
                 <div class="titel">
                     <h2>INHOUDSTAFEL</h2>
                 </div>
-
                     <div class="inhoudstabel">
                         <div class="n">
-                            <h4>Over ons</h4>
+                    <a href="./overOns.html"><h4>Over ons</h4></a>
 
                         </div>
                         <div class="m-reverse">
@@ -67,43 +54,33 @@
                         </div>
                     </div>
                     <div class="inhoudstabel">
-                        <h4>Kunstenaar in de kijker</h4>
+                        <a href="./Kunstenaar.html"><h4>Kunstenaar in de kijker</h4></a>
                         <p>p.07</p>
                     </div>
                     <div class="inhoudstabel">
-                        <h4>Meesterwerk van de maand</h4>
+                      <a href="./Meesterwerk.html"><h4>Meesterwerk van de maand</h4></a>
                         <p>p.09</p>
                     </div>
                     <div class="inhoudstabel">
-                        <h4>Gallerijen</h4>
+                    <a href="./Gallerijen.html"><h4>Gallerijen</h4></a>
                         <p>p.15</p>
 
                     </div>
                     <div class="inhoudstabel">
-                        <h4>Gallerij toevoegen</h4>
+                      <a href="./GallerijToevoegen.html"><h4>Gallerij toevoegen</h4></a>
                         <p>p.63</p>
                     </div>
-                    <div class="inhoudstabel laatste" >
-                        <h4>Veelgestelde vragen</h4>
+                    <div class="inhoudstabel">
+                      <a href="./updateGallery.html"><h4>Gallerij aanpassen</h4></a>
                         <p>p.65</p>
+                    </div>
+                    <div class="inhoudstabel laatste" >
+                       <a href="./veelgesteldeVragen.html"><h4>Veelgestelde vragen</h4></a> 
+                        <p>p.67</p>
                     </div>
             </div> 
         </div>
         <div class="page-right" style="background-color: #E50F10;">
-                             <!--           <div class="test">
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>                
-                <p></p>
-                <p></p>
-            </div>--> 
             <div class="galleries-table">
                 <div class="inhoud-title">
                     <h2>GALLERIJEN</h2>
