--- a/veelgesteldeVragen.html
+++ b/veelgesteldeVragen.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/zrl0ajt.css">
     <link rel="stylesheet" href="./style/index.css">
-    <title>index</title>
+    <title>Veelgestelde vragen</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
 <link rel="stylesheet" href="./style/style.css">
 <link rel="stylesheet" href="./style/veelgesteldevragen.css">
 </head>
@@ -18,12 +19,14 @@
             <nav>
                 <ul>
                     <li> <a href="./index.html">01 HOME</a></li>
+                    <li> <a href="./inhoud.html">03 INHOUDSTAFEL</a></li>
                     <li> <a href="./overOns.html">05 OVER ONS</a></li>
                     <li><a href="./Kunstenaar.html">07 KUNSTENAAR IN DE KIJKER</a></li>
                     <li><a href="./Meesterwerk.html">09 MEESTERWERK VAN DE MAAND</a></li>
                     <li><a href="./Gallerijen.html">15 GALLERIJEN</a></li>
                     <li><a href="./GallerijToevoegen.html">63 GALLERIJ TOEVOEGEN</a></li>
-                    <li class="selected"><a href="./veelgesteldeVragen.html">65 VEELGESTELDE VRAGEN</a></li>
+                    <li><a href="./updateGallery.html">65 GALLERIJ AANPASSEN</a></li>
+                    <li class="selected"><a href="./veelgesteldeVragen.html">67 VEELGESTELDE VRAGEN</a></li>
                 </ul>
             </nav>
             <div class="contact">
@@ -37,20 +40,6 @@
     </div>
     <div class="book-wrapper">
         <div class="page-left">
-           <!-- <div class="test">
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>                
-                <p></p>
-                <p></p>
-            </div> --> 
             <div class="veelgesteldeVragen-title">
                 <h2>VEELGESTELDE VRAGEN</h2>
                 <p>Navigeer door onze veelgestelde vragen om antwoorden te vinden op enkele van de meest voorkomende vragen over onze website en diensten. Hier bieden we duidelijke uitleg over het toevoegen en beheren van galerijen, evenals andere nuttige informatie voor zowel galerij-eigenaren als kunstliefhebbers. Mocht je vraag niet beantwoord worden, aarzel dan niet om contact met ons op te nemen.</p>
@@ -74,20 +63,6 @@
         </div>
 
         <div class="page-right" style="    background-color: #E50F10;">
-         <!-- <div class="test">
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>                
-                <p></p>
-                <p></p>
-            </div>-->
             <div class="veelgesteldeVragen-text-5">
                 <h3>Hoe kan ik contact opnemen met de beheerders van de website?</h3>
                 <p>Om contact op te nemen met de beheerders van de website, ga naar de “Contact” pagina en vul het contactformulier in. We streven ernaar om zo snel mogelijk te reageren op je bericht en je vragen of opmerkingen te beantwoorden.</p>
@@ -107,7 +82,7 @@
         </div>
     </div>
     <div id="arrows">
-        <a href="./Gallerijen.html"><img src="./images/Path 2.svg" alt="" srcset=""></a>  
+        <a href="./updateGallery.html"><img src="./images/Path 2.svg" alt="" srcset=""></a>  
        </div>
 </body>
 </html>
