--- a/Kunstenaar.html
+++ b/Kunstenaar.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style/index.css">
     <script src="artists.js" defer type="module"></script>
     <title>Kunstenaar in de kijker</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
 <link rel="stylesheet" href="./style/style.css">
 <link rel="stylesheet" href="./style/Kunstenaar.css">
 </head>
@@ -19,12 +20,14 @@
             <nav>
                 <ul>
                     <li> <a href="./index.html">01 HOME</a></li>
+                    <li> <a href="./inhoud.html">03 INHOUDSTAFEL</a></li>
                     <li> <a href="./overOns.html">05 OVER ONS</a></li>
                     <li class="selected"><a href="./Kunstenaar.html">07 KUNSTENAAR IN DE KIJKER</a></li>
                     <li><a href="./Meesterwerk.html">09 MEESTERWERK VAN DE MAAND</a></li>
                     <li><a href="./Gallerijen.html">15 GALLERIJEN</a></li>
                     <li><a href="./GallerijToevoegen.html">63 GALLERIJ TOEVOEGEN</a></li>
-                    <li><a href="./veelgesteldeVragen.html">65 VEELGESTELDE VRAGEN</a></li>
+                    <li><a href="./updateGallery.html">65 GALLERIJ AANPASSEN</a></li>
+                    <li><a href="./veelgesteldeVragen.html">67 VEELGESTELDE VRAGEN</a></li>
                 </ul>
             </nav>
             <div class="contact">
