--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/zrl0ajt.css">
     <link rel="stylesheet" href="./style/index.css">
-    <title>index</title>
+    <title>Home</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
 <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
@@ -16,13 +17,15 @@
             </div>
             <nav>
                 <ul>
-                    <li class="selected"> <a href="#">01 HOME</a></li>
+                    <li class="selected"> <a href="./index.html">01 HOME</a></li>
+                    <li> <a href="./inhoud.html">03 INHOUDSTAFEL</a></li>
                     <li> <a href="./overOns.html">05 OVER ONS</a></li>
                     <li><a href="./Kunstenaar.html">07 KUNSTENAAR IN DE KIJKER</a></li>
                     <li><a href="./Meesterwerk.html">09 MEESTERWERK VAN DE MAAND</a></li>
                     <li><a href="./Gallerijen.html">15 GALLERIJEN</a></li>
                     <li><a href="./GallerijToevoegen.html">63 GALLERIJ TOEVOEGEN</a></li>
-                    <li><a href="./veelgesteldeVragen.html">65 VEELGESTELDE VRAGEN</a></li>
+                    <li><a href="./updateGallery.html">65 GALLERIJ AANPASSEN</a></li>
+                    <li><a href="./veelgesteldeVragen.html">67 VEELGESTELDE VRAGEN</a></li>
                 </ul>
             </nav>
             <div class="contact">
@@ -36,20 +39,6 @@
     </div>
     <div class="book-wrapper">
         <div class="page-left">
-       <!--           <div class="test">
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>                
-                <p></p>
-                <p></p>
-            </div>--> 
             <div class="logo">
                 <img src="./images/logo.png" alt="" srcset="">
             </div>
@@ -59,32 +48,14 @@
         </div>
 
         <div class="page-right">
-            <!--           <div class="test">
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>                
-                <p></p>
-                <p></p>
-            </div>--> 
             <div class="quote">
                 <h2>Ontdek de verborgen kunst
                     van Brussel</h2>
             </div>
-
-
         </div>
     </div>
-
 <div id="arrows">
     <a href="./inhoud.html"><img src="./images/Path 1.svg" alt="" srcset=""></a>  
    </div>
-   
 </body>
 </html>
