Made the code more readable, added comments

--- a/updateGallery.html
+++ b/updateGallery.html
@@ -51,37 +51,13 @@
         </div>
 
         <div class="page-right">
-       <!--     <div class="form-wrapper">
-                <h2 id="registreer">REGISTREER</h2>
-                <p id="form">Nog geen account? Registreer nu en voeg je gallerij toe</p>
-                <div class="form-section">
-                    <p class="form-title">Email & Wachtwoord</p>
-                    <form class="form-input" id="registerform">
-                        <input type="email" id="email" name="email" placeholder="Email">
-                        <input type="password" id="password" name="password" placeholder="Wachtwoord">
-                        <button type="submit">Registreer</button>
-                        <p id="resultRegister"></p>
-                    </form>
-                </div>
-                <h2 id="registreer">LOGIN</h2>
-                <p id="form">Heb je al een account? Log nu in en voeg je gallerij toe</p>
-                <div class="form-section">
-                    <p class="form-title">Email & Wachtwoord</p>
-                    <form class="form-input" id="loginform">
-                        <input type="email" id="loginEmail" name="loginEmail" placeholder="Email">
-                        <input type="password" id="loginPassword" name="loginPassword" placeholder="Wachtwoord">
-                        <button type="submit">Login</button>
-                        <p id="resultLogin"></p>
-                    </form>
-                </div>
-            </div>-->
             <div class="form-wrapper">
         <h3 style="color:#E50F10">Verwijder een gallerij</h3>
             <div class="form-section">
                 <p class="form-title">Naam van de gallerij:</p>
                 <form class="form-input">
                     <input type="text" name="" id="deleteGallery" placeholder="Vul in">
-                    <button type="submit" id="submitDelete">Verwijder</button>
+                    <button type="submit" id="submitDelete">Verwijderen</button>
                 </form>
                 <p class="form-title" id="deleteResult"style="color: #E50F10; font-weight: bold;"></p>
             </div>
@@ -93,13 +69,13 @@
             </div>
             <h3 style="color:#E50F10">Pas een gallerij aan</h3>
             <div class="form-section">
-                <p class="form-title">Naam van de gallerij:</p>
+                <p class="form-title">Naam te wijzigen gallerij:</p>
                 <form class="form-input">
                     <input type="text" id="updateGallery" name="updateGallery" placeholder="Vul in">
                 </form>
             </div>
             <div class="form-section">
-                <p class="form-title">Toegankelijkheid <br> prijs</p>
+                <p class="form-title">Toegankelijkheid <br><br> prijs <br><br> kunstenaar</p>
                 <form class="form-input">
                     <input type="text" id="accessability" name="accessability" placeholder="Vul in">
                     <input type="text" id="price" name="price" placeholder="Vul in">
@@ -121,7 +97,7 @@
                     </form>
             </div>
             <div>
-            <button type="submit" id="SubmitUpdateGallery" style="float: right; margin-right:12px ;">aanpassen</button>
+            <button type="submit" id="SubmitUpdateGallery" style="float: right; margin-right:12px ;">Aanpassen</button>
         </div>
             <p id="resultUpdate" style="color: #E50F10; font-weight: bold;"></p>
             </div>
