--- a/GallerijToevoegen.html
+++ b/GallerijToevoegen.html
@@ -51,30 +51,6 @@
         </div>
 
         <div class="page-right">
-       <!--     <div class="form-wrapper">
-                <h2 id="registreer">REGISTREER</h2>
-                <p id="form">Nog geen account? Registreer nu en voeg je gallerij toe</p>
-                <div class="form-section">
-                    <p class="form-title">Email & Wachtwoord</p>
-                    <form class="form-input" id="registerform">
-                        <input type="email" id="email" name="email" placeholder="Email">
-                        <input type="password" id="password" name="password" placeholder="Wachtwoord">
-                        <button type="submit">Registreer</button>
-                        <p id="resultRegister"></p>
-                    </form>
-                </div>
-                <h2 id="registreer">LOGIN</h2>
-                <p id="form">Heb je al een account? Log nu in en voeg je gallerij toe</p>
-                <div class="form-section">
-                    <p class="form-title">Email & Wachtwoord</p>
-                    <form class="form-input" id="loginform">
-                        <input type="email" id="loginEmail" name="loginEmail" placeholder="Email">
-                        <input type="password" id="loginPassword" name="loginPassword" placeholder="Wachtwoord">
-                        <button type="submit">Login</button>
-                        <p id="resultLogin"></p>
-                    </form>
-                </div>
-            </div>-->
             <div class="form-wrapper">
             <div class="form-section">
                 <p class="form-title">Naam van de Galerij</p>
@@ -95,7 +71,7 @@
                 </form>
             </div>
             <div class="form-section">
-                <p class="form-title">Toegankelijkheid <br> prijs</p>
+                <p class="form-title">Toegankelijkheid <br><br> prijs <br><br>Kunstenaar</p>
                 <form class="form-input">
                     <input type="text" id="accessability" name="accessability" placeholder="Vul in">
                     <input type="text" id="price" name="price" placeholder="Vul in">
@@ -109,22 +85,20 @@
                     </form>
             </div>
             <div class="form-section">
-                <p class="form-title">Beschrijving 1 Galerij</p>
+                <p class="form-title">Beschrijving 1 Galerij <br><br>Titel 1</p>
 
                 <form class="form-input">                    
                     <input type="text" id="description1" name="description1" placeholder="beschrijving">
                     <input type="text" id="description1-title" name="description1-title" placeholder="Titel">
                     </form>
-                    <p class="form-title">Titel 1</p>
             </div>
             <div class="form-section">
-                <p class="form-title">Beschrijving 2 Galerij</p>
+                <p class="form-title">Beschrijving 2 Galerij <br><br>Titel 2</p>
 
                 <form class="form-input">                    
                     <input type="text" id="description2" name="description2" placeholder="beschrijving">
                     <input type="text" id="description2-title" name="description2-title" placeholder="Titel">
                     </form>
-                    <p class="form-title">Titel 2</p>
             </div>
             <div class="form-section last-line">
                 <p class="form-title">Sociale Media Links</p>
@@ -134,7 +108,7 @@
                     <input type="text" id="Furl" name="Furl" placeholder="Facebook link">
                     </form>
             </div>
-            <button type="submit" id="paard" style="float: right; margin-right:12px ;">Toevoegen</button>
+            <button type="submit" id="submitGallery" style="float: right; margin-right:12px ;">Toevoegen</button>
             <p id="result" style="color: #E50F10; font-weight: bold;"></p>
             </div>
         </div>
